--- a/SIGTR/users/templates/users/vistaInicial.html
+++ b/SIGTR/users/templates/users/vistaInicial.html
@@ -109,7 +109,23 @@
                         </audio>
                     </div>
                     <div class="mensajeIA" id="mensajeIA">
-                        <input class="textIA" id="textIAID" type="text" placeholder="Envía un mensaje a ICASOFT IA"><i class="fa-solid fa-paper-plane enviarMessage"></i>  
+                        <div class="header-chat" id="header-chat">
+                            <h1>ICASOFT IA</h1>
+                        </div>
+                        <div class="body-chat" id="body-chat">
+                            <div class="iaResponse">
+                                <p class="message_chat">Hola</p>
+                            </div>
+                            <div class="userRequest">
+                                <p class="message_chat_user">Hi</p>
+                            </div>
+                        </div>
+                        <div class="footer-chat" id="footer-chat">
+                            <div class="textIACont"><input id="textIAID" type="text"
+                                    placeholder="Envía un mensaje a ICASOFT IA"></div>
+                            <div class="contentChatBtn"><button class="btnChat"><i
+                                        class="fa-solid fa-paper-plane enviarMessage"></i></button></div>
+                        </div>
                     </div>
                     <div class="vozIA" id="vozIA">
                         <label for="" class="textoVoz">AYÚDAME</label>
@@ -200,9 +216,12 @@
             <div class="footer"></div>
         </div>
     </div>
+    {% include "dashboard/client/modalInicio.html" %}
     <script src="https://kit.fontawesome.com/233c0f00ee.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script> <!--para la ubicación en tiempo real-->
     <script src="{% static 'dashboard/js/clientes/mapa.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/centroAprendizaje.js' %}"></script>
     <script>
         function login(){
             window.location.href = "{% url 'users:login' %}"; 
