--- a/SIGTR/dashboard/templates/dashboard/client/modalInicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/modalInicio.html
@@ -204,8 +204,11 @@
                     <div class="titulo-archivos-escaneados">Archivos escaneados:</div>
                     <div id="archivos-escaneados-lista" class="lista-archivos-escaneados"></div>
                 </div>
-                <div class="contenedor-logs-animados">
+                <div class="contenedor-logs-animados" id="contenedor-logs-animados">
                     <div id="antivirus-log-container" class="log-actual"></div>
+                </div>
+                <div class="verAntivirus" id="verAntivirus" style="display: none;">
+                    <button id="verMasAnt">Ver más</button>
                 </div>
             </div>
  
@@ -238,6 +241,9 @@
                         <div class="titulo">Recomendaciones</div>
                         <div id="recomendacionesSeguridad" class="contenido">-</div>
                     </div>
+                </div>
+                <div id="volverAnt">
+                    <button>Volver a escanear</button>
                 </div>
             </div>
         </div>
@@ -300,18 +306,6 @@
                             <i class="fa-solid fa-screwdriver-wrench"></i> Reparar
                         </button>
                     </div>
-                </div>
-            </div>
-
-            <!-- Sección de resultados -->
-            <div id="mantenimientoResultado" class="resultado-success" style="display: none;">
-                <!-- <i class="fas fa-check-circle" style="font-size: 24px; margin-right: 10px;"></i> -->
-                <div class="contentResultado">
-                    <div id="iconResult"><i id="iconoType"></i></div>
-                    <div id="resultadoMensaje">
-                        <!-- Aquí va el mensaje del resultado -->
-                    </div>
-                    <span class="closeSucessMant" id="close"><i class="fa-solid fa-xmark iconNotifClose"></i></span>
                 </div>
             </div>
         </div>
@@ -461,12 +455,6 @@
                         <div class="red-velocimetro-valor">0.00</div>
                         <div class="red-velocimetro-unidad">Mbps</div>
                     </div>
-                    <!-- Botón de iniciar integrado en el modal -->
-                    <!-- <div class="red-iniciar-seccion">
-                        <button id="red-btn-iniciar-test" class="red-btn-test">
-                            <i class="fa-solid fa-gauge-high"></i> INICIAR PRUEBA DE VELOCIDAD
-                        </button>
-                    </div> -->
                 </div>
             </div>
 
