--- a/SIGTR/dashboard/templates/dashboard/client/notificaciones.html
+++ b/SIGTR/dashboard/templates/dashboard/client/notificaciones.html
@@ -1,7 +1,9 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'dashboard/css/notificaciones.css' %}">
 
-<!--NOTIFICACIONES DE ÉXTIO-->
 <div class="notificaciones" id="notificaciones">
+
+</div>
+<div class="notificaciones" id="notificacionesDevice">
 
 </div>
