--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -369,8 +369,7 @@ body {
     grid-template-areas:
         "nombreAsistente"
         "imagenIA"
-        "mensajeIA"
-        "vozIA ";
+        "mensajeIA";
     gap: 10px;
     justify-items: center;
     width: 100%;
@@ -461,7 +460,7 @@ body {
 }
 
 .header-chat {
-    background-color: rgb(53 143 179 / 72%);
+    background-color: rgb(53 143 179);
     color: white;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -469,17 +468,15 @@ body {
     align-items: center;
     justify-content: center;
     font-size: x-large;
-    padding: 10px;
 }
 
 .body-chat {
-    width: 95%;
+    width: 95%; 
     display: none;
     flex-direction: column;
-    max-height: 250px;
-    height: 250px;
+    max-height: 300px;
+    height: 100%;
     overflow-y: auto;
-    padding: 10px;
     scrollbar-width: thin;
     scrollbar-color: #0a3f54 #b6e1ef;
     align-self: center;
@@ -531,19 +528,18 @@ body {
 .userRequest {
     display: flex;
     justify-content: flex-end;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .iaResponse {
     display: flex;
     justify-content: flex-start;
-    width: 100%;
 }
 
-.footer-chat {
+.footer-chat .contentFooter {
     display: grid;
     grid-template-areas: "textIACont contentChatBtn";
-    grid-template-columns: 90% auto;
+    grid-template-columns: 85% auto;
     border: 1px solid;
     border-radius: 30px;
     height: 100%;
@@ -562,6 +558,7 @@ body {
     text-align: center;
     background: none;
     border: none;
+    font-size: large;
 }
 
 .enviarMessage {
@@ -584,31 +581,11 @@ body {
     height: 100%;
     border-radius: 30px;
     display: grid;
+    justify-content: start;
 }
 
 .btnChat {
     background: none;
-}
-
-.vozIA {
-    grid-area: vozIA;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-    width: 80%;
-    height: 100%;
-    border: 2px solid rgb(42, 76, 89);
-    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(38, 40, 40));
-    box-shadow: var(--sombrasContent);
-    border-radius: 30px;
-    color: white;
-    cursor: pointer;
-    font-size: large;
-}
-
-.vozIA:hover {
-    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(53, 53, 53));
 }
 
 .modo-chat-activo #mensajeIA {
@@ -623,11 +600,22 @@ body {
     display: flex;
     overflow-y: auto;
     overflow-x: hidden;
-    backdrop-filter: blur(6rem);
+    /* backdrop-filter: blur(6rem); */
     border-radius: 10px;
 }
 
 .modo-chat-activo #footer-chat {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    background: #358fb3;
+    align-items: center;
+    justify-items: center;
+    border-bottom-right-radius:30px;
+    border-bottom-left-radius: 30px;
+}
+
+.modo-chat-activo #footer-chat .contentFooter {
     width: 95%;
     grid-template-columns: 80% auto;
     gap: 8px;
@@ -636,18 +624,25 @@ body {
     height: 80%;
 }
 
+.modo-chat-activo .contentFooter {
+    width: 100%;
+    height: 100%;
+}
+
 .modo-chat-activo .iaResponse {
-    margin-left: 15px;
+    margin-right: 10px;
     margin-top: 10px;
 }
 
 .modo-chat-activo .userRequest {
-    margin-right: 15px;
+    margin-right: 10px;
     margin-top: 10px;
 }
 
 .modo-chat-activo .contentChatBtn {
     background: #0a3f54;
+    justify-content: center;
+    align-items: center;
 }
 
 .modo-chat-activo .enviarMessage {
@@ -1098,15 +1093,12 @@ body {
         height: 100%;
     }
 
-    .catVerComp {}
-
     /*tercera columna:*/
     .asistenteSoporte {
         grid-template-areas:
             "nombreAsistente"
             "imagenIA"
-            "mensajeIA"
-            "vozIA ";
+            "mensajeIA";
         gap: 10px;
         grid-template-rows: auto;
         justify-items: center;
@@ -1161,14 +1153,20 @@ body {
     }
 
     .microfono {
-        border: 3px solid rgb(42, 76, 89);
         padding: 8px 10px 8px 10px;
         border-radius: 100%;
+        border: 3px solid #007ea7;
+        background-color: #007ea7;
+        color: white;
+        font-size: x-large;
     }
 
     .microfono:hover {
-        background-color: #007ea7;
-
+        background-color: white;
+        border: 3px solid #007ea7;
+        box-shadow: 3px 2px 10px #007ea7;
+        color: #007ea7;
+        cursor: pointer;
     }
 
     /*cuarta columna*/
