--- a/SIGTR/tickets/templates/tickets/modalAsistencia.html
+++ b/SIGTR/tickets/templates/tickets/modalAsistencia.html
@@ -22,7 +22,7 @@
                     <div class="textDescrip">Dirección para la asistencia</div>
                     <div class="inputDescrip">
                         <input type="text" id="direccion" class="textAsistencia">
-                        <button class="btnUbiCliente" id="btnUbiCliente">
+                        <button class="btnUbiCliente" id="btnUbiCliente" type="button">
                             <div><i class="fa-solid fa-location-dot"></i></div>
                             <div>Mi ubicación</div>
                         </button>
